# flipclip

./: .env.example  .gitignore  Cargo.toml  Info.plist  README.md  entitlements.plist  plan.md  run-clean.sh  run.sh  show-ui.swift  test-debug.sh  test-notifications.sh  test-simple.sh
src/: app.rs  main.rs
