[package]
name = "flipclip"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "FlipClip"
identifier = "com.flipclip.app"
icon = []
version = "1.0.0"
resources = []
copyright = "Copyright (c) 2024 FlipClip"
category = "Productivity"
short_description = "Clipboard transformation utility"
long_description = """
FlipClip is a macOS menu bar utility that transforms your clipboard content using AI.
Copy any text, press ⌥⌘J to transform it instantly with various modes like summarization,
bullet points, tone adjustment, and more.
"""

[dependencies]
objc = "0.2"
cocoa = "0.25"
global-hotkey = "0.6"
anyhow = "1.0"
arboard = "3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
enigo = "0.2"
lazy_static = "1.4"
dirs = "5.0"
dotenv = "0.15"
